--- a/chatgpt/ecs_game/package.json
+++ b/chatgpt/ecs_game/package.json
@@ -1,6 +1,11 @@
 {
   "devDependencies": {
+    "ts-loader": "^9.5.1",
+    "typescript": "^5.3.3",
     "webpack": "*",
-    "webpack-cli": "*"
+    "webpack-cli": "^5.1.4"
+  },
+  "scripts": {
+    "dev": "webpack --watch"
   }
 }
